fix alignment with gallery hikeContainer

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
    
 }
 
-.container {
+.navContainer {
     /* border: 3px solid red; */
     width: 90%;
     margin: 0 auto;
@@ -90,23 +90,29 @@ footer {
     width: 90%;
     border-top: 1px solid rgba(51,51,51);
     margin: 0 auto;
-    
-};
+}
 
-.instrument {
-    width: 90%;
-    overflow: auto;
-    background-color: white;
-    opacity: 0.9;
-    padding: 2%, 5%;
-    margin: 5%, auto;
-    border-radius: 5px;
-  }
-  
-  .image {
+.image {
+    border: 3px solid red;
+    height: 200px;
+    width: auto;
     display: inline-block;
     vertical-align: middle;
-    width: 32%;
-    min-width: 100px;
+
+}
+
+.hike {
+    border: 3px solid green;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#hikeContainer{
+    border: 3px solid orange;
     margin: 0 auto;
-  }
+    width: 90%;
+
+}
+
+
